lunaa: Fixed IMS crash
Signed-off-by: mvimal2607 <mvimal2607@gmail.com>

--- a/lunaa/Changelog.txt
+++ b/lunaa/Changelog.txt
@@ -1,3 +1,4 @@
+
 Source Changelog:
 
 • Merged android-16.0.0_r1
@@ -9,3 +10,4 @@ Device Changelogs:
 • Freeform broken
 • UDFPS Overlay broken(it recognizes the touch and register and also working fine Without any issues)
 • You can do OTA Update if You On A15 build take Backup For Safty
+• Fixed IMS crash
