--- a/lunaa/Changelog.txt
+++ b/lunaa/Changelog.txt
@@ -1,13 +1,4 @@
+Changelog:
 
-Source Changelog:
-
-• Merged android-16.0.0_r1
-• Settings: Adapt new DoubleTapPower page to fit our gesture settings
-
-Device Changelogs:
-
-• Initial A16 Build(BETA)
-• Freeform broken
-• UDFPS Overlay broken(it recognizes the touch and register and also working fine Without any issues)
-• You can do OTA Update if You On A15 build take Backup For Safty
-• Fixed IMS crash
+• Synced With latest Source
+• Freeform removed for now
