--- a/lunaa/Changelog.txt
+++ b/lunaa/Changelog.txt
@@ -1,5 +1,8 @@
-• Fixed media server crash(media rendering issue)
-• Kernel Upstreamed to 5.4.293
+• Fixes HeyMelody app
+• Fixes FOD issue
+• Bring Back freeform
+• Disable all capitalized smart reply text
+• Moved to qssi system IMS"
 
 Bugs:
 • UDFPS Overlay broken(it recognizes the touch and register and also working fine Without any issues)
