push vanilla ota

--- a/lunaa/Changelog.txt
+++ b/lunaa/Changelog.txt
@@ -1,9 +1,2 @@
-• Vanilla: update microg, microg companion, F-droid
-• Allow enabling Desktop Mode (Experimental dev setting)
-• Launcher: replace AOSP "Close" action with custom "Kill" action
-• Add Google Sans Flex font
-• Inbuilt keybox implementation in dev option
-• Few other changes
-
-Bugs:
-• UDFPS Overlay broken(it recognizes the touch and register and also working fine Without any issues)
+• Fixed UDFPS Overlay.
+• Sync with latest source
