--- a/lunaa/Changelog.txt
+++ b/lunaa/Changelog.txt
@@ -1,14 +1,6 @@
-• CalyxOS chromium- GrapheneOS vanadium
-• Add Smooth Display QS tile
-• Fix clock animations during keyguard transitions
-• Fix multi sim numbers not clickable in about page
-• Fix oversized biometric prompt corner radius (AOSP)
-• Refactor Gaming Macro and:
-  - Allow enabling Smooth Display
-  - Fix three finger screenshot gesture toggle not applying
-  - Save and restore some previous states more accurately
-• YASR: Improve unavailable mic handling
-• YASR: Only allow whitelisted (supported) device types
-• YASR: Fixed a bug that made devices be gone on resume
-• YASR: Updated dependencies
+• Add system-wide support for DC Dimming (+ QS tile)
+• Make internet tile to be added by default on first boot
+• Migrate to QTI USB Gadget AIDL HAL
+• Switch to NCM USB tethering
 • Few other minor changes
+• Sync with latest source
